--- a/trunk/tweet-dl/src/tweet/dl/view/MainView.form
+++ b/trunk/tweet-dl/src/tweet/dl/view/MainView.form
@@ -63,8 +63,8 @@
                       </Group>
                       <EmptySpace min="-2" pref="37" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                          <Component id="AuthenticateBTN" pref="200" max="32767" attributes="0"/>
                           <Component id="sampleSpinner" max="32767" attributes="0"/>
-                          <Component id="AuthenticateBTN" min="-2" pref="100" max="-2" attributes="0"/>
                       </Group>
                   </Group>
               </Group>
@@ -97,7 +97,9 @@
   <SubComponents>
     <Component class="javax.swing.JLabel" name="AuthenticateLabel">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Autenticar:"/>
+        <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
+          <ResourceString bundle="properties/Languaje_es.properties" key="AskAuthKey" replaceFormat="java.util.ResourceBundle.getBundle(&quot;{bundleNameSlashes}&quot;).getString(&quot;{key}&quot;)"/>
+        </Property>
       </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="AuthenticateBTN">
